--- a/img2obj.ipynb
+++ b/img2obj.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "7cdf583b",
    "metadata": {},
    "outputs": [
@@ -35,14 +35,14 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: matplotlib in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (3.5.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (1.3.2)\n",
       "Requirement already satisfied: numpy>=1.17 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (1.23.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (8.4.0)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (3.0.6)\n",
       "Requirement already satisfied: packaging>=20.0 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (21.3)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (1.3.2)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (4.28.5)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (8.4.0)\n",
       "Requirement already satisfied: six>=1.5 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib) (1.15.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: triangle in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (20200424)\n",
@@ -56,6 +56,7 @@
     "from numpy.linalg import norm\n",
     "import math\n",
     "%pip install matplotlib\n",
+    "%matplotlib inline\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.collections as mcollections\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "861b445e",
    "metadata": {},
    "outputs": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "be46b36c",
    "metadata": {},
    "outputs": [],
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "7fcbc7e8",
    "metadata": {},
    "outputs": [],
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "886fecbf",
    "metadata": {},
    "outputs": [],
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "9b660769",
    "metadata": {},
    "outputs": [],
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "48ae907b",
    "metadata": {},
    "outputs": [
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "51903cc2",
    "metadata": {},
    "outputs": [
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "69fa1f75",
    "metadata": {},
    "outputs": [
@@ -396,7 +397,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_27580/3190859110.py:43: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_28592/3190859110.py:43: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "07365c39",
    "metadata": {},
    "outputs": [
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "42343861",
    "metadata": {},
    "outputs": [],
@@ -615,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "bcd5a2f0",
    "metadata": {},
    "outputs": [
@@ -654,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "0c642571",
    "metadata": {},
    "outputs": [],
@@ -668,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "5af79533",
    "metadata": {},
    "outputs": [
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "4940af86",
    "metadata": {},
    "outputs": [
@@ -827,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "9ac6cf8d",
    "metadata": {},
    "outputs": [
@@ -923,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "5c149524",
    "metadata": {},
    "outputs": [
@@ -982,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "0bc9b2ce",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "194bfeb4",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "b6237b9f",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1066,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_27580/2723710238.py:27: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_28592/2723710238.py:27: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -1122,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "a427c303",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "e73ce9b0",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "0d51ed06",
    "metadata": {},
    "outputs": [
@@ -1217,7 +1218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_27580/2510377857.py:36: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_28592/2510377857.py:36: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -1291,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "52e71930",
    "metadata": {},
    "outputs": [
@@ -1375,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "4bef33ae",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1384,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_27580/1755170740.py:33: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_28592/1755170740.py:33: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -1454,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "54d7bcde",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "ddcdc197",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "ca9e742d",
    "metadata": {},
    "outputs": [
@@ -1644,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "d95a1428",
    "metadata": {},
    "outputs": [
@@ -1739,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "0651d9b2",
    "metadata": {},
    "outputs": [
@@ -1769,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "8ebbda61",
    "metadata": {},
    "outputs": [
@@ -1901,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "5303cc44",
    "metadata": {},
    "outputs": [],
@@ -1957,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "7afa0edf",
    "metadata": {},
    "outputs": [
@@ -2003,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "b940a5c3",
    "metadata": {},
    "outputs": [
@@ -2040,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "f179ac52",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2049,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_27580/231197490.py:31: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_28592/231197490.py:31: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -2094,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "15f8af17",
    "metadata": {},
    "outputs": [
@@ -2136,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "6c1ce671",
    "metadata": {},
    "outputs": [
@@ -2180,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "cf5fb0ae",
    "metadata": {},
    "outputs": [
@@ -2250,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "dd1448ee",
    "metadata": {},
    "outputs": [
@@ -2258,7 +2259,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_27580/231197490.py:31: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "/var/folders/4l/m0byp3xn42jbp2657xg83hmw0000gn/T/ipykernel_28592/231197490.py:31: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
       "  fig.show()\n"
      ]
     },
@@ -2351,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "722724b6",
    "metadata": {},
    "outputs": [],
@@ -2362,7 +2363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "id": "a77fa908",
    "metadata": {},
    "outputs": [
@@ -2463,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "id": "a82806b9",
    "metadata": {},
    "outputs": [
@@ -2507,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "fd359710",
    "metadata": {},
    "outputs": [
@@ -2541,7 +2542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "id": "71a21cef",
    "metadata": {},
    "outputs": [
@@ -2579,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "0ba71b06",
    "metadata": {},
    "outputs": [
@@ -2587,7 +2588,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "o New_Obj_20240602_144822\n",
+      "o New_Obj_20240603_000920\n",
       "0\n",
       "[[6, 7, 21], [21, 20, 6], [7, 8, 22], [22, 21, 7], [8, 9, 23], [23, 22, 8], [9, 6, 20], [20, 23, 9]]\n",
       "[6, 7, 8, 9, 20, 21, 22, 23]\n",
@@ -2957,7 +2958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "71e14850",
    "metadata": {},
    "outputs": [
@@ -2965,7 +2966,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! Created New Obj File. 20240602_144822\n"
+      "Done! Created New Obj File. 20240603_000920\n"
      ]
     }
    ],
