--- a/img2obj.ipynb
+++ b/img2obj.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "id": "7cdf583b",
    "metadata": {},
    "outputs": [
@@ -35,14 +35,14 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: matplotlib in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (3.5.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (1.3.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
       "Requirement already satisfied: cycler>=0.10 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (1.3.2)\n",
       "Requirement already satisfied: pillow>=6.2.0 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (8.4.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (4.28.5)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (3.0.6)\n",
       "Requirement already satisfied: packaging>=20.0 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (21.3)\n",
       "Requirement already satisfied: numpy>=1.17 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (1.23.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (3.0.6)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (4.28.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib) (1.15.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: triangle in /Users/ichi/miniforge3/envs/env_python3_8/lib/python3.8/site-packages (20200424)\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "id": "861b445e",
    "metadata": {},
    "outputs": [
@@ -110,13 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 93,
    "id": "be46b36c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 元画像の設定。Original img\n",
-    "img_folder_path = \"/Users/****/Desktop/\"\n",
+    "img_folder_path = \"/Users/****/Desktop/\" # path should end with \"/\".\n",
     "img_name = \"sample.png\"\n",
     "img_path = img_folder_path + img_name\n",
     "\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "id": "7fcbc7e8",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "id": "886fecbf",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "id": "9b660769",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "id": "48ae907b",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "img = cv2.imread(img_path, 0)\n",
+    "img = np.array(cv2.imread(img_path, 0))\n",
     "\n",
     "if img.all() != None:\n",
     "    print(img.shape)\n",
@@ -254,12 +254,13 @@
     "    plt.imshow(im_list)\n",
     "    plt.show()\n",
     "else:\n",
-    "    print(\"img is empty!\")"
+    "    print(\"img is empty!\")\n",
+    "    print(img)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "id": "51903cc2",
    "metadata": {},
    "outputs": [
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 101,
    "id": "69fa1f75",
    "metadata": {},
    "outputs": [
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 102,
    "id": "07365c39",
    "metadata": {},
    "outputs": [
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 103,
    "id": "42343861",
    "metadata": {},
    "outputs": [],
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 104,
    "id": "bcd5a2f0",
    "metadata": {},
    "outputs": [
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 105,
    "id": "0c642571",
    "metadata": {},
    "outputs": [],
@@ -661,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 106,
    "id": "5af79533",
    "metadata": {},
    "outputs": [
@@ -734,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 107,
    "id": "4940af86",
    "metadata": {},
    "outputs": [
@@ -820,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 108,
    "id": "9ac6cf8d",
    "metadata": {},
    "outputs": [
@@ -916,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 109,
    "id": "5c149524",
    "metadata": {},
    "outputs": [
@@ -975,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 110,
    "id": "0bc9b2ce",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 111,
    "id": "194bfeb4",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 112,
    "id": "b6237b9f",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 113,
    "id": "a427c303",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 114,
    "id": "e73ce9b0",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 115,
    "id": "0d51ed06",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 116,
    "id": "52e71930",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 117,
    "id": "4bef33ae",
    "metadata": {},
    "outputs": [
@@ -1423,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 118,
    "id": "54d7bcde",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 119,
    "id": "ddcdc197",
    "metadata": {},
    "outputs": [
@@ -1580,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 120,
    "id": "ca9e742d",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 121,
    "id": "d95a1428",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 122,
    "id": "0651d9b2",
    "metadata": {},
    "outputs": [
@@ -1733,12 +1734,12 @@
    "id": "8e4cf611",
    "metadata": {},
    "source": [
-    "#### 上面下面の頂点結合、側面Normal作成"
+    "#### 上面下面の頂点結合、側面Normal(面法線)作成"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 123,
    "id": "8ebbda61",
    "metadata": {},
    "outputs": [
@@ -1870,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 124,
    "id": "5303cc44",
    "metadata": {},
    "outputs": [],
@@ -1926,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 125,
    "id": "7afa0edf",
    "metadata": {},
    "outputs": [
@@ -1972,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 126,
    "id": "b940a5c3",
    "metadata": {},
    "outputs": [
@@ -2009,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 127,
    "id": "f179ac52",
    "metadata": {},
    "outputs": [
@@ -2055,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 128,
    "id": "15f8af17",
    "metadata": {},
    "outputs": [
@@ -2097,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 129,
    "id": "6c1ce671",
    "metadata": {},
    "outputs": [
@@ -2141,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 130,
    "id": "cf5fb0ae",
    "metadata": {},
    "outputs": [
@@ -2211,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 131,
    "id": "dd1448ee",
    "metadata": {},
    "outputs": [
@@ -2304,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 132,
    "id": "722724b6",
    "metadata": {},
    "outputs": [],
@@ -2315,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 133,
    "id": "a77fa908",
    "metadata": {},
    "outputs": [
@@ -2416,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 134,
    "id": "a82806b9",
    "metadata": {},
    "outputs": [
@@ -2455,12 +2456,12 @@
    "id": "dbe6a49f",
    "metadata": {},
    "source": [
-    "## Normalの作成"
+    "## Normal(面法線)の作成"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 135,
    "id": "fd359710",
    "metadata": {},
    "outputs": [
@@ -2494,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 136,
    "id": "71a21cef",
    "metadata": {},
    "outputs": [
@@ -2532,7 +2533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 137,
    "id": "0ba71b06",
    "metadata": {},
    "outputs": [
@@ -2540,7 +2541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "o New_Obj_20240603_002609\n",
+      "o New_Obj_20240605_011755\n",
       "0\n",
       "[[6, 7, 21], [21, 20, 6], [7, 8, 22], [22, 21, 7], [8, 9, 23], [23, 22, 8], [9, 6, 20], [20, 23, 9]]\n",
       "[6, 7, 8, 9, 20, 21, 22, 23]\n",
@@ -2910,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 138,
    "id": "71e14850",
    "metadata": {},
    "outputs": [
